心機一転、作り直す

--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,33 @@
+ext {
+    junitVersion = '4.12'
+    assertjVersion = '3.3.0'
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
-group = 'backpaper0'
-version = '1.0-SNAPSHOT'
+tasks.withType(JavaCompile) {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+    options.encoding = 'UTF-8'
+}
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-[compileJava, compileTestJava].each { it.options.encoding = 'UTF-8' }
+javadoc {
+    options {
+        charSet 'UTF-8'
+        docEncoding 'UTF-8'
+        encoding = 'UTF-8'
+        links 'http://docs.oracle.com/javase/jp/8/docs/api/'
+        use = true
+    }
+    failOnError = false
+}
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    testCompile "junit:junit:4.12"
+    testCompile "junit:junit:${junitVersion}"
+    testCompile "org.assertj:assertj-core:${assertjVersion}"
 }
